Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19059

PathView currentIndex not maintained when changing model

XMLWordPrintable

    • 98ebab25abc8f66629598cb9ebd4fe942bc0c57f

      I have setup an example with 3 columns. The 1st and 3rd columns are PathView, while the 2nd one is ListView. All 3 columns have currentIndex set to 2 at startup. When I click the 'Set Model' button, the model of both 2nd and 3rd column are changed to defaultModel. The currentIndex of ListView (2nd column) remains at 2. However, the currentIndex of PathView (3rd column) is something else. I would expect the PathView to keep the currentIndex unchanged even if I change it's model.

        1. PathViewModel.qml
          4 kB
          Mable Chow
        2. PathViewModel.jpg
          40 kB
          Mable Chow
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            machow Mable Chow
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes