Jump to same model index (if it exists) when the model changes

For PathView, ListView does this already.

Task-number: QTBUG-19059
Change-Id: Id09087ad372e46661794b0cb15cb30fc88802c4b
Reviewed-on: http://codereview.qt.nokia.com/2330
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>